--- a/PHX_20121114.md
+++ b/PHX_20121114.md
@@ -1,7 +1,7 @@
-suspend 中止
-invoice 发票 （charge for invoice）
-jargon 行话
-confidential 机密的
-implement 实施
-distinct 不同的
-invoke 请求、调用
+- suspend 中止
+- invoice 发票 （charge for invoice）
+- jargon 行话
+- confidential 机密的
+- implement 实施
+- distinct 不同的
+- invoke 请求、调用
