--- a/PHX_20121114.md
+++ b/PHX_20121114.md
@@ -7,3 +7,8 @@
 - invoke 请求、调用
 - exclusively  [ɪk'skluːsɪvli] 专门地
 - explicit 明确的
+- utilize 利用
+- sanitization 搞卫生 n.
+- prior to 在...之前
+- legacy 遗物
+- compromised 妥协
